# zookeeper-rest-proxy

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: workflow.yaml
resources/: deployment.yaml  ingress.yaml  service.yaml
src/zookeeper_rest_proxy/: main.py
src/zookeeper_rest_proxy/config/: settings.py
src/zookeeper_rest_proxy/models/: models.py
src/zookeeper_rest_proxy/routes/: health_route.py  zk_route.py
src/zookeeper_rest_proxy/services/: zookeeper.py
