[project]
name = "zookeeper-rest-proxy"
version = "0.1.0"
description = "RESTful API for interacting with Apache ZooKeeper"
authors = [
    {name = "Ryan Weiler", email = "ryanweiler92@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "kazoo>=2.10.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
zk-proxy = "zookeeper_rest_proxy.main:start"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["zookeeper_rest_proxy"]